# atlassian_slack_google

./: README.md  blueprint.py  makefile  pyproject.toml  requirements.txt  routes.json  run.py
ags_deployment/: .gitlab-ci.yml  Dockerfile  docker-compose-dev.yml  docker-compose-prod.yml  ngrok.yml
configuration/: account.py  base.py
database/: database.py  table_database.py
feature/demo/: query_jira_to_slack.py
feature/example/: get_google_sheet.py  slack_bolt_app_feat.py
feature/slack_btn/: btn_create_jira.py
integration_tool/: __init__.py
integration_tool/atlassian/: confluence.py  jira.py
integration_tool/google/: gmail_sender.py  google_sheet.py
integration_tool/slack/: bolt_app.py  bot.py  message_builder.py
utility/: __init__.py  constant.py  logger.py  spec.py
